--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -46,6 +46,35 @@ label {
     
 }
 
-ul {
-    list-style: none;
+.container {
+    max-width: 80%;
+    margin: auto;
+    padding-bottom: 200px;
 }
+
+table {
+   width: 100%;  
+}
+
+table th {
+    height: 80px;
+    padding-top: 100px;
+    font-size: 24px;
+    text-decoration: underline;
+    text-align: left;
+    border-bottom: 1px solid lightgrey;
+}
+
+th:hover {
+    cursor: pointer;
+}
+
+table td {
+    border-bottom: 1px solid lightgrey;
+    height: 40px;
+    padding-left: 10px;
+    text-transform: uppercase;
+   
+}
+
+
