--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -21,33 +21,33 @@ header img {
 
 main {
     width: 1500px;
-    max-width: 80%;
+    max-width: 98%;
     margin: auto;
 }
 
 h1 {
     text-align: center;
-    font-size: 50px;
+    font-size: 42px;
     padding: 100px 0 100px 0;
 }
 
 label {    
     font-size: 24px;
+    padding-left: 20px;
     
 }
 
 #sok {
     font-size: 20px;
-    width: 1000px;
-    max-width: 50%;
+    padding-left: 20px;
+    width: 100%;
     height: 35px;
-    border: 1px solid lightgrey;
+    border: 1px solid rgb(230, 226, 226);
     border-radius: 5px;
-    
 }
 
 .container {
-    max-width: 80%;
+    max-width: 98%;
     margin: auto;
     padding-bottom: 200px;
 }
